Refactor test and add test for map link crawl
Signed-off-by: Jarno Elovirta <jarno@elovirta.com>